{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 215,
  "lineage": "5aff4d09-3cba-b078-fadb-06a86a3d2040",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b9b0e269f3d3aaa",
            "arn": "arn:aws:ec2:us-east-1:058264524827:elastic-ip/eipalloc-09b9b0e269f3d3aaa",
            "domain": "vpc",
            "id": "eipalloc-09b9b0e269f3d3aaa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-147-211-167.compute-1.amazonaws.com",
            "public_ip": "54.147.211.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "nat-eip"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b9b0e269f3d3aaa",
            "association_id": "eipassoc-06fa66f3b0117bd16",
            "connectivity_type": "public",
            "id": "nat-0a58edfcce3e6e211",
            "network_interface_id": "eni-0d1baaada04c2bf5d",
            "private_ip": "10.0.1.51",
            "public_ip": "54.147.211.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d2442e6bc57d1c6e",
            "tags": {
              "Environment": "Development",
              "Name": "custom-nat-gateway"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "custom-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:security-group/sg-0648aa32292e4fd43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0648aa32292e4fd43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-sg-20240903013144077800000010",
            "name_prefix": "eks-sg-",
            "owner_id": "058264524827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "eks-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:security-group/sg-0ea76f4bbd2db047d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ea76f4bbd2db047d",
            "ingress": [],
            "name": "shortlet-CICD001-cluster-20240903013146002100000012",
            "name_prefix": "shortlet-CICD001-cluster-",
            "owner_id": "058264524827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-CICD001-cluster",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-CICD001-cluster",
              "Project": "shortlet"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:security-group/sg-01d26e8964cf3ceeb",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-01d26e8964cf3ceeb",
            "ingress": [],
            "name": "shortlet-CICD001-node-2024090301314404670000000e",
            "name_prefix": "shortlet-CICD001-node-",
            "owner_id": "058264524827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-CICD001-node",
              "Project": "shortlet",
              "kubernetes.io/cluster/shortlet-CICD001": "owned"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-CICD001-node",
              "Project": "shortlet",
              "kubernetes.io/cluster/shortlet-CICD001": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2136633565",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea76f4bbd2db047d",
            "security_group_rule_id": "sgr-0b26154d2ddd84078",
            "self": false,
            "source_security_group_id": "sg-01d26e8964cf3ceeb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1261875887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-0ce5f09d6ba85ea51",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2603848973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-0e4cfe293a2ea2b03",
            "self": false,
            "source_security_group_id": "sg-0ea76f4bbd2db047d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-366330631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-0dd4a5275f770bd61",
            "self": false,
            "source_security_group_id": "sg-0ea76f4bbd2db047d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3700925585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-02f98028ce91f6e0e",
            "self": false,
            "source_security_group_id": "sg-0ea76f4bbd2db047d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3486226608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-0293242caa0f74ff4",
            "self": false,
            "source_security_group_id": "sg-0ea76f4bbd2db047d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2875894651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-05be5db8a51838332",
            "self": false,
            "source_security_group_id": "sg-0ea76f4bbd2db047d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3595863588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-00d4c753380d07176",
            "self": false,
            "source_security_group_id": "sg-0ea76f4bbd2db047d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3773417064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-08972dae1ad88ee44",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1353551905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-03c9dbf18ec76e7a6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4109513678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01d26e8964cf3ceeb",
            "security_group_rule_id": "sgr-099f32022c1168013",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:network-acl/acl-0a6e3d988c47219ee",
            "default_network_acl_id": "acl-0a6e3d988c47219ee",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a6e3d988c47219ee",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264524827",
            "subnet_ids": [
              "subnet-074c74f860a4ae1bf",
              "subnet-0ce421195424af5c4",
              "subnet-0d2442e6bc57d1c6e",
              "subnet-0dad8962eb885312a"
            ],
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-default",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-default",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:route-table/rtb-03d107bb648168420",
            "default_route_table_id": "rtb-03d107bb648168420",
            "id": "rtb-03d107bb648168420",
            "owner_id": "058264524827",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-default",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-default",
              "Project": "shortlet"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:security-group/sg-021a23b6edf6cfc93",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-021a23b6edf6cfc93",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264524827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-default",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-default",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057953eaaee16b250",
            "arn": "arn:aws:ec2:us-east-1:058264524827:elastic-ip/eipalloc-057953eaaee16b250",
            "domain": "vpc",
            "id": "eipalloc-057953eaaee16b250",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-231-175-144.compute-1.amazonaws.com",
            "public_ip": "3.231.175.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-us-east-1a",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-us-east-1a",
              "Project": "shortlet"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:internet-gateway/igw-00f9558f7f522edd3",
            "id": "igw-00f9558f7f522edd3",
            "owner_id": "058264524827",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057953eaaee16b250",
            "association_id": "eipassoc-042b5d095c2f4ff41",
            "connectivity_type": "public",
            "id": "nat-0f944e8072ed3bb38",
            "network_interface_id": "eni-05bfefa8da292d5c0",
            "private_ip": "10.0.1.157",
            "public_ip": "3.231.175.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d2442e6bc57d1c6e",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-us-east-1a",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-us-east-1a",
              "Project": "shortlet"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078ffd1ef73bd8cf61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f944e8072ed3bb38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078ffd1ef73bd8cf6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00f9558f7f522edd3",
            "id": "r-rtb-0b86ff96e789b86701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b86ff96e789b8670",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:route-table/rtb-078ffd1ef73bd8cf6",
            "id": "rtb-078ffd1ef73bd8cf6",
            "owner_id": "058264524827",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-private",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-private",
              "Project": "shortlet"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:route-table/rtb-0b86ff96e789b8670",
            "id": "rtb-0b86ff96e789b8670",
            "owner_id": "058264524827",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-public",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-public",
              "Project": "shortlet"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067b3a9bca3ae6fd2",
            "route_table_id": "rtb-078ffd1ef73bd8cf6",
            "subnet_id": "subnet-0ce421195424af5c4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f71010b9951b339d",
            "route_table_id": "rtb-078ffd1ef73bd8cf6",
            "subnet_id": "subnet-0dad8962eb885312a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d29dcf2c6b3155a",
            "route_table_id": "rtb-0b86ff96e789b8670",
            "subnet_id": "subnet-0d2442e6bc57d1c6e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5e87cac5c75cf4c",
            "route_table_id": "rtb-0b86ff96e789b8670",
            "subnet_id": "subnet-074c74f860a4ae1bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:subnet/subnet-0ce421195424af5c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce421195424af5c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264524827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-private-us-east-1a",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-private-us-east-1a",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:subnet/subnet-0dad8962eb885312a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad8962eb885312a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264524827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-private-us-east-1c",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-private-us-east-1c",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:subnet/subnet-0d2442e6bc57d1c6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2442e6bc57d1c6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264524827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-public-us-east-1a",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-public-us-east-1a",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:subnet/subnet-074c74f860a4ae1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074c74f860a4ae1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264524827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc-public-us-east-1c",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc-public-us-east-1c",
              "Project": "shortlet"
            },
            "vpc_id": "vpc-094ec92119e0ca1e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264524827:vpc/vpc-094ec92119e0ca1e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6e3d988c47219ee",
            "default_route_table_id": "rtb-03d107bb648168420",
            "default_security_group_id": "sg-021a23b6edf6cfc93",
            "dhcp_options_id": "dopt-0f28581f325746a34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094ec92119e0ca1e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d107bb648168420",
            "owner_id": "058264524827",
            "tags": {
              "Environment": "Development",
              "Name": "shortlet-vpc",
              "Project": "shortlet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "shortlet-vpc",
              "Project": "shortlet"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}